feat: empNum 기준 통일 및 ApiResponse 추가, 직원/부서 기능 수정