@@ -1,8 +1,8 @@
 package kr.co.secondProject.employee.service.Impl;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
-import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -11,6 +11,7 @@ import kr.co.secondProject.employee.dto.EmployeeResponseDto;
 import kr.co.secondProject.employee.dto.EmployeeUpdateRequestDto;
 import kr.co.secondProject.employee.entity.Employee;
 import kr.co.secondProject.employee.repository.EmployeeManageRepository;
+import kr.co.secondProject.employee.service2.EmployeeService;
 import lombok.RequiredArgsConstructor;
 
 @Service
@@ -18,62 +19,66 @@ import lombok.RequiredArgsConstructor;
 @Transactional(readOnly = true)
 public class EmployeeServiceImpl implements EmployeeService {
 
-    private final EmployeeManageRepository employeeManageRepository;
-    private final PasswordEncoder passwordEncoder;
+    private final EmployeeManageRepository employeeRepository;
 
     @Override
-    public List<EmployeeResponseDto> getEmployees(String name, String status) {
+    public List<EmployeeResponseDto> getEmployees(String name) {
         List<Employee> employees;
 
-        boolean hasName = name != null && !name.isBlank();
-        boolean hasStatus = status != null && !status.isBlank();
-
-        if (hasName && hasStatus) {
-            employees = employeeManageRepository.findByNameContainingAndStatus(name, status);
-        } else if (hasName) {
-            employees = employeeManageRepository.findByNameContaining(name);
-        } else if (hasStatus) {
-            employees = employeeManageRepository.findByStatus(status);
+        if (name != null && !name.isBlank()) {
+            employees = employeeRepository.findByNameContaining(name);
         } else {
-            employees = employeeManageRepository.findAll();
+            employees = employeeRepository.findAll();
         }
 
         return employees.stream()
                 .map(EmployeeResponseDto::from)
-                .toList();
+                .collect(Collectors.toList());
+    }
+
+    @Override
+    public EmployeeResponseDto getEmployee(Long id) {
+        Employee employee = employeeRepository.findById(id)
+                .orElseThrow(() -> new IllegalArgumentException("해당 직원이 없습니다. id=" + id));
+
+        return EmployeeResponseDto.from(employee);
     }
 
     @Override
     @Transactional
     public EmployeeResponseDto createEmployee(EmployeeCreateRequestDto requestDto) {
-        String encodedPassword = passwordEncoder.encode(requestDto.getPassword());
+        if (employeeRepository.existsByEmpNum(requestDto.getEmpNum())) {
+            throw new IllegalArgumentException("이미 존재하는 사원번호입니다.");
+        }
 
-        Employee employee = Employee.create(
-                requestDto.getEmpId(),
-                requestDto.getName(),
-                requestDto.getEmail(),
-                encodedPassword,
-                requestDto.getHireDate(),
-                requestDto.getStatus(),
-                requestDto.getRole(),
-                requestDto.getPosition(),
-                requestDto.getDpNum()
-        );
+        if (employeeRepository.existsByEmail(requestDto.getEmail())) {
+            throw new IllegalArgumentException("이미 존재하는 이메일입니다.");
+        }
 
-        Employee savedEmployee = employeeManageRepository.save(employee);
+        Employee employee = Employee.builder()
+                .empNum(requestDto.getEmpNum())
+                .name(requestDto.getName())
+                .email(requestDto.getEmail())
+                .hireDate(requestDto.getHireDate())
+                .role(requestDto.getRole())
+                .position(requestDto.getPosition())
+                .dpNum(requestDto.getDpNum())
+                .build();
+
+        Employee savedEmployee = employeeRepository.save(employee);
         return EmployeeResponseDto.from(savedEmployee);
     }
 
     @Override
     @Transactional
     public EmployeeResponseDto updateEmployee(Long id, EmployeeUpdateRequestDto requestDto) {
-        Employee employee = employeeManageRepository.findById(id)
+        Employee employee = employeeRepository.findById(id)
                 .orElseThrow(() -> new IllegalArgumentException("해당 직원이 없습니다. id=" + id));
 
-        employee.updateInfo(
+        employee.update(
                 requestDto.getName(),
                 requestDto.getEmail(),
-                requestDto.getStatus(),
+                requestDto.getHireDate(),
                 requestDto.getRole(),
                 requestDto.getPosition(),
                 requestDto.getDpNum()
@@ -84,10 +89,10 @@ public class EmployeeServiceImpl implements EmployeeService {
 
     @Override
     @Transactional
-    public void resignEmployee(Long id) {
-        Employee employee = employeeManageRepository.findById(id)
+    public void deleteEmployee(Long id) {
+        Employee employee = employeeRepository.findById(id)
                 .orElseThrow(() -> new IllegalArgumentException("해당 직원이 없습니다. id=" + id));
 
-        employee.resign();
+        employeeRepository.delete(employee);
     }
 }
